# yiya-core

./: .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL.md  Makefile  Makefile.am  README.md  about  autogen.sh  configure.ac  docker-compose.yml  docker-entrypoint.sh  libyiyaconsensus.pc.in
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addressindex.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  (+96 more)
src/algo/: hash_algos.h
src/assets/: assetdb.cpp  assetdb.h  assets.cpp  assets.h  assettypes.cpp  assettypes.h
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_yiya.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  prevector_destructor.cpp  rollingbloom.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.cpp  consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_sse4.cpp  sha512.cpp  sha512.h
src/crypto/ctaes/: README.md
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  assetcontroldialog.cpp  assetcontroldialog.h  assetcontroltreewidget.cpp  assetcontroltreewidget.h  assetfilterproxy.cpp  assetfilterproxy.h  assetrecord.h  assetsdialog.cpp  assetsdialog.h  assettablemodel.cpp  assettablemodel.h  bantablemodel.cpp  bantablemodel.h  callback.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  createassetdialog.cpp  createassetdialog.h  csvmodelwriter.cpp  csvmodelwriter.h  darkstyle.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  (+88 more)
src/qt/forms/: addressbookpage.ui  assetcontroldialog.ui  assetsdialog.ui  coincontroldialog.ui  createassetdialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  reissueassetdialog.ui  sendassetsentry.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: yiya_af.ts  yiya_af_ZA.ts  yiya_ar.ts  yiya_be_BY.ts  yiya_bg.ts  yiya_bg_BG.ts  yiya_ca.ts  yiya_ca@valencia.ts  yiya_ca_ES.ts  yiya_cs.ts  yiya_cy.ts  yiya_da.ts  yiya_de.ts  yiya_el.ts  yiya_el_GR.ts  yiya_en.ts  yiya_en_GB.ts  yiya_eo.ts  yiya_es.ts  yiya_es_AR.ts  yiya_es_CL.ts  yiya_es_CO.ts  yiya_es_DO.ts  yiya_es_ES.ts  yiya_es_MX.ts  yiya_es_UY.ts  yiya_es_VE.ts  yiya_et.ts  yiya_et_EE.ts  yiya_eu_ES.ts  yiya_fa.ts  yiya_fa_IR.ts  yiya_fi.ts  yiya_fr.ts  yiya_fr_CA.ts  yiya_fr_FR.ts  yiya_gl.ts  yiya_he.ts  yiya_hi_IN.ts  yiya_hr.ts  (+46 more)
src/qt/res/: yiya-qt-res.rc
src/qt/test/: compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  wallettests.cpp  wallettests.h
src/rpc/: assets.cpp  blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  safemode.h  server.cpp  server.h  test.json
src/script/: interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  yiyaconsensus.cpp  yiyaconsensus.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  (+27 more)
src/test/assets/: asset_reissue_tests.cpp  asset_tests.cpp  asset_tx_tests.cpp  cache_tests.cpp  serialization_tests.cpp
src/test/data/: README.md
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h  (+1 more)
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.cpp  feebumper.h  fees.cpp  fees.h  init.cpp  init.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+297 files in other folders)
